--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ textarea{
 .img-text-block {
     position: absolute;
     bottom: 20px;
-    right: 15px;
+    left: 30px;
     background: #4aaaa5;
     color:  #ffffff; 
     margin-bottom:15px;
