changes to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ body{
     
 }
 
-.main-content-container{
+.main-content-background{
     background-image: url(../images/rebel/rebel.png);}
 
 #about-me-text{
